--- a/Knearestneigbor in Tensorflow.ipynb
+++ b/Knearestneigbor in Tensorflow.ipynb
@@ -8107,8 +8107,7 @@
     "\n",
     "with tf.Session() as sess:\n",
     "    print(sess.run(tf.reduce_sum(pp, reduction_indices=2)))\n",
-    "    #reduction_indices = # of dimension the tensor must be reduced to.\n",
-    "    "
+    "    #reduction_indices = # of dimension the tensor must be reduced to."
    ]
   },
   {
@@ -8118,7 +8117,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -8130,7 +8131,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
