continuing tensorflow study]

--- a/releaseone/Tensorflow Release One.ipynb
+++ b/releaseone/Tensorflow Release One.ipynb
@@ -52,6 +52,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.0, 2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sess.run([node1, node2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
